--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
       justify-content: space-between;
       align-items: center;
       border-radius: 5px;
+      position:sticky;
+      top:0;
+      z-index: 1000;
+      box-shadow: 0 2px 4px rgba(0, 0, 0, 0.6);
     }
 
     .logo {
